--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -5,6 +5,7 @@ $black: #3B3B3B;
 
 /* Background */
 $gradient: linear-gradient(103.39deg, #74FDAF 28.27%, #05C7BE 94.84%);
+$gradient180: linear-gradient(180deg, #0BCABE 0%, #74FDAF 100%);
 
 /* Media queries */
 $mobile-sm: "max-width: 550px";
