compilte login page + persist install + profile page teamplate + redux store user reducer

--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -2,6 +2,7 @@
 $green: #0EAC99;
 $activeLink: #fff;
 $black: #3B3B3B;
+$yellow: #fce699;
 
 /* Background */
 $gradient: linear-gradient(103.39deg, #74FDAF 28.27%, #05C7BE 94.84%);
