--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -17,6 +17,10 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
+    &:disabled:hover {
+      box-shadow: none;
+    }
+
     &_circle {
       width: 60px;
       height: 60px;
