--- a/src/components/ResetPassword/ResetPassword.module.scss
+++ b/src/components/ResetPassword/ResetPassword.module.scss
@@ -25,11 +25,17 @@
         margin-bottom: 3rem;
         color: $black;
         font-weight: 400;
+        text-align: center;
     }
 
     &__form input {
         margin-bottom: 2.4rem;
         max-width: 36.6rem;
+    }
+
+    &__link {
+        color: $black;
+        font-size: 2rem;
     }
 }
 
