--- a/src/components/UI/avatar/Avatar.module.scss
+++ b/src/components/UI/avatar/Avatar.module.scss
@@ -1,7 +1,8 @@
 .avatar {
-    display: block;
     border-radius: 50%;
     transition: transform .2s linear;
+    width: 20rem;
+    height: 20rem;
 
     &:hover {
         transform: scale(1.05);
