--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -11,6 +11,7 @@
     padding: 1rem 3rem;
     transition: box-shadow .2s linear;
     font-family: inherit;
+    color: $black;
   
     &:hover {
       cursor: pointer;
