--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -11,7 +11,7 @@ body {
     height: 100%;
 
     &.no-scroll {
-        overflow: hidden;     
+        overflow: hidden;
     }
 }
 
@@ -47,4 +47,22 @@ p {
     margin: 0 auto;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+}
+
+.item-enter {
+    opacity: 0;
+}
+
+.item-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+}
+
+.item-exit {
+    opacity: 1;
+}
+
+.item-exit-active {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
 }
