--- a/src/components/MainPage/Standart/standart.scss
+++ b/src/components/MainPage/Standart/standart.scss
@@ -153,6 +153,7 @@
     color: $black;
     transition: box-shadow .2s linear;
     justify-content: center;
+    padding: 1rem;
 
     &:hover {
         box-shadow: 0 0 10px #74e4d7;
