--- a/src/components/Registration/Registration.module.scss
+++ b/src/components/Registration/Registration.module.scss
@@ -25,6 +25,7 @@
         margin-bottom: 3rem;
         color: $black;
         font-weight: 400;
+        text-align: center;
     }
 
     &__form input {
